# tensorrt_inference

./: .gitignore  Dockerfile  Dockerfile-jetson  INSTALL.md  README.md
CenterFace/: CMakeLists.txt  CenterFace.cpp  CenterFace.h  README.md  config.yaml  export_onnx.py  inference.py  main.cpp
FCN/: CMakeLists.txt  FCN.cpp  FCN.h  README.md  config.yaml  main.cpp
MiniFASNet/: CMakeLists.txt  MiniFASNet.cpp  MiniFASNet.h  README.md  config.yaml  main.cpp
RetinaFace/: CMakeLists.txt  README.md  RetinaFace.cpp  RetinaFace.h  config.yaml  config_anti.yaml  export_onnx.py  main.cpp
ScaledYOLOv4/: CMakeLists.txt  README.md  ScaledYOLOv4.cpp  ScaledYOLOv4.h  config-p5.yaml  config-p6.yaml  config-p7.yaml  export_onnx.py  main.cpp  requirements.txt
Swin-Transformer/: CMakeLists.txt  README.md  Swin-Transformer.cpp  Swin-Transformer.h  config.yaml  inference.py  main.cpp
YOLOv6/: CMakeLists.txt  README.md  YOLOv6.cpp  YOLOv6.h  config.yaml  main.cpp
Yolov4/: CMakeLists.txt  README.md  Yolov4.cpp  Yolov4.h  config-tiny.yaml  config-xmish.yaml  config-yolov4-csp.yaml  config.yaml  export_onnx.py  main.cpp  requirements.txt  yolov4-voc_mobilenetv2.cfg  yolov4.cfg
Yolov4/cfg/: yolov4-csp.cfg  yolov4-voc_mobilenetv2_mish.cfg  yolov4.cfg  yolov4x-mish.cfg
alexnet/: CMakeLists.txt  README.md  alexnet.cpp  alexnet.h  config.yaml  inference.py  label.txt  main.cpp  requirements.txt
arcface/: CMakeLists.txt  README.md  arcface.cpp  arcface.h  common.hpp  config.yaml  export_onnx.py  inference.py  main.cpp
code/includes/: CenterFace.h  FCN.h  MiniFASNet.h  RetinaFace.h  ScaledYOLOv4.h  Swin-Transformer.h  YOLO.h  YOLOv6.h  Yolov4.h  alexnet.h  arcface.h  build.h  classification.h  common.h  detection.h  efficientnet.h  face_alignment.h  faces.h  fast-reid.h  feature.h  gender-age.h  ghostnet.h  keypoints.h  lenet.h  mmpose.h  model.h  nanodet.h  scrfd.h  segmentation.h  seresnext.h  yolor.h  yolov5.h  yolov7.h  yolov8.h
code/src/: CenterFace.cpp  FCN.cpp  MiniFASNet.cpp  RetinaFace.cpp  ScaledYOLOv4.cpp  Swin-Transformer.cpp  YOLO.cpp  YOLOv6.cpp  Yolov4.cpp  alexnet.cpp  arcface.cpp  build.cpp  classification.cpp  common.cpp  detection.cpp  efficientnet.cpp  face_alignment.cpp  faces.cpp  fast-reid.cpp  feature.cpp  gender-age.cpp  ghostnet.cpp  keypoints.cpp  lenet.cpp  mmpose.cpp  model.cpp  nanodet.cpp  scrfd.cpp  segmentation.cpp  (+5 more)
efficientnet/: CMakeLists.txt  README.md  config.yaml  efficientnet.cpp  efficientnet.h  export_onnx.py  main.cpp
example/: CMakeLists.txt  README.md  config.yaml  main.cpp
face_alignment/: CMakeLists.txt  README.md  config.yaml  export_onnx.py  face_alignment.cpp  face_alignment.h  main.cpp
gender-age/: CMakeLists.txt  README.md  config.yaml  export_onnx.py  face_model.py  gender-age.cpp  gender-age.h  main.cpp
ghostnet/: CMakeLists.txt  README.md  config.yaml  export_onnx.py  ghostnet.cpp  ghostnet.h  ghostnet.py  main.cpp
lenet/: CMakeLists.txt  README.md  config.yaml  export_onnx.py  lenet.cpp  lenet.h  lenet.py  main.cpp  mnist_net.onnx  mnist_net.pt  train.py
mmpose/: CMakeLists.txt  README.md  config.yaml  main.cpp  mmpose.cpp  mmpose.h
nanodet/: CMakeLists.txt  README.md  config.yaml  main.cpp  nanodet.cpp  nanodet.h
project/: CMakeLists.txt  main.cpp
project/CenterFace/: CMakeLists.txt  README.md  centerface.py  export_onnx.py  inference.py  main.cpp
project/FCN/: CMakeLists.txt  README.md  export_onnx.py  inference.py  main.cpp
project/MiniFASNet/: CMakeLists.txt  README.md  export_onnx.py  main.cpp
project/RetinaFace/: CMakeLists.txt  README.md  inference.py  main.cpp
project/ScaledYOLOv4/: CMakeLists.txt  README.md  main.cpp
project/Swin-Transformer/: CMakeLists.txt  README.md  export_onnx.py  main.cpp
project/YOLOv6/: CMakeLists.txt  README.md  main.cpp
project/Yolov4/: CMakeLists.txt  README.md  main.cpp
project/Yolov4/cfg/: yolov3.cfg  yolov4-csp.cfg
project/alexnet/: CMakeLists.txt  README.md  export_onnx.py  main.cpp
project/arcface/: CMakeLists.txt  README.md  export_onnx.py  main.cpp  requirements.txt
project/efficientnet/: CMakeLists.txt  README.md  inference.py  main.cpp
project/face_alignment/: CMakeLists.txt  README.md  main.cpp
project/fast-reid/: CMakeLists.txt  README.md  main.cpp
project/gender-age/: CMakeLists.txt  README.md  export_onnx.py  inference.py  main.cpp  requirements.txt
project/ghostnet/: CMakeLists.txt  README.md  inference.py  main.cpp
project/lenet/: CMakeLists.txt  README.md  export_onnx.py  inference.py  main.cpp  mnist_net.pt  requirements.txt
project/mmpose/: CMakeLists.txt  README.md  main.cpp
project/nanodet/: CMakeLists.txt  README.md  export_onnx.py  main.cpp
project/scrfd/: CMakeLists.txt  README.md  main.cpp
project/seresnext/: CMakeLists.txt  README.md  export_onnx.py  main.cpp
project/yolor/: CMakeLists.txt  README.md  main.cpp
project/yolov5/: CMakeLists.txt  README.md
project/yolov7/: CMakeLists.txt  README.md  main.cpp
project/yolov8/: CMakeLists.txt  README.md  export_onnx.py
python/: main.py
scrfd/: CMakeLists.txt  README.md  config.yaml  main.cpp  scrfd.cpp  scrfd.h
seresnext/: CMakeLists.txt  README.md  common.hpp  config.yaml  export_onnx.py  inference.py  main.cpp  seresnext.cpp  seresnext.h  seresnext.py
yolov5/: CMakeLists.txt  README.md  config.yaml  config6.yaml  export_onnx.py  yolov5.cpp  yolov5.h
yolov7/: CMakeLists.txt  README.md  coco_eval.py  config.yaml  config_w6.yaml  main.cpp  yolov7.cpp  yolov7.h
(+57 files in other folders)
